Fix CI compile error for join choice button list type
Agent-Logs-Url: https://github.com/Faboit1/BLG/sessions/0570b175-2e6c-4003-9a2c-7e89610c5a73

Co-authored-by: Faboit1 <177459774+Faboit1@users.noreply.github.com>